# typical

./: .gitignore  .ignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  install.sh  release.sh  toast.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: types.t
benchmarks/rust/: Cargo.toml  build.rs
benchmarks/rust/src/: main.rs  types.rs
benchmarks/typescript/: package-lock.json  package.json  tsconfig.json
benchmarks/typescript/src/: main.ts
example/: Cargo.toml  README.md  types.t
example/src/: main.rs
examples/: bool.t  unit.t
examples/rust/: Cargo.toml  README.md  build.rs  types.t
examples/rust/src/: main.rs
examples/typescript/: .eslintrc.js  README.md  package-lock.json  package.json  types.t
examples/typescript/src/: main.ts
integration-tests/rust/src/: comprehensive.rs  main.rs  schema_evolution.rs
integration-tests/types/: main.t
integration-tests/types/basic/: unit.t  void.t
integration-tests/types/metasyntactic/: bar.t  foo.t
integration-tests/types/schema-evolution/: before.t  main.t
integration/rust/src/: main.rs
integration/types/: main.t
integration/types/basic/: void.t
integration_tests/rust/: Cargo.toml  build.rs
integration_tests/rust/src/: assertions.rs  circular_dependency.rs  comprehensive.rs  degenerate.rs  main.rs  round_trip.rs  schema_evolution.rs  types.rs
integration_tests/types/: main.t  types.t
integration_tests/types/circular_dependency/: main.t  types.t
integration_tests/types/comprehensive/: bar.t  foo.t  main.t  types.t
integration_tests/types/degenerate/: types.t
integration_tests/types/schema_evolution/: after.t  before.t  main.t  types.t
integration_tests/typescript/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json  tsconfig.json
integration_tests/typescript-node/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
integration_tests/typescript-node/src/: assertions.ts  (+5 more)
integration_tests/typescript-web/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  webpack.js
integration_tests/typescript_node/: .ignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
integration_tests/typescript_web/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
src/: assertions.rs  count.rs  error.rs  error_merger.rs  format.rs  generate_rust.rs  generate_typescript.rs  identifier.rs  main.rs  naming_conventions.rs  parser.rs  schema.rs  schema_loader.rs  token.rs  tokenizer.rs  validator.rs
test_data/: omnifile  types.rs  types.ts
test_data/typescript/: common.ts  types.ts
(+31 files in other folders)
