[package]
name = "typical"
version = "0.11.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2021"
description = "Data interchange with algebraic data types."
license = "MIT"
documentation = "https://github.com/stepchowfun/typical"
homepage = "https://github.com/stepchowfun/typical"
repository = "https://github.com/stepchowfun/typical"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
colored = "1"
pad = "0.1"
textwrap = "0.14"
unicode-segmentation = "1"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
