[package]
name = "typical"
version = "0.14.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "Data interchange with algebraic data types."
license = "MIT"
documentation = "https://github.com/stepchowfun/typical"
homepage = "https://github.com/stepchowfun/typical"
repository = "https://github.com/stepchowfun/typical"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
colored = "3"
pad = "0.1"
textwrap = "0.16"
unicode-segmentation = "1"
