[package]
name = "typical"
version = "0.15.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "Data interchange with algebraic data types."
license = "MIT"
documentation = "https://github.com/stepchowfun/typical"
homepage = "https://github.com/stepchowfun/typical"
repository = "https://github.com/stepchowfun/typical"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.5"
colored = "3.1.1"
pad = "0.1.6"
textwrap = "0.16.2"
unicode-segmentation = "1.13.3"
